Small spacing fix for h2s

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,6 +103,7 @@ header.gnav > div {
   line-height: 1em;
   border-top: 1px solid var(--static-color-heading-border);
   margin-top: 3.5rem;
+  margin-bottom: 0;
   padding: 20px  0;
 
 }
